# mcp-server-motherduck

./: .bumpver.toml  .gitignore  .mcpbignore  .pre-commit-config.yaml  Dockerfile  INSTALL-CLAUDE-DESKTOP.md  MCP_CLIENT_CONFIG.md  README.md  STDIO_COMPATIBILITY_FIX.md  makefile  manifest.json  pyproject.toml  server.json  smithery.yaml  start_enhanced_server.py  test_mcp_logging.py
.claude-plugin/: marketplace.json
.github/workflows/: bump-version.yml  e2e-tests.yml  publish-mcp.yml
plugins/motherduck-narrative/: README.md  WORKFLOW.md
plugins/motherduck-narrative/.claude-plugin/: plugin.json
plugins/motherduck-narrative/agents/: narrative-arc-reviewer.md  paper-cohesion-auditor.md
plugins/motherduck-narrative/examples/: brief.example.md  slide-plan.example.md
plugins/motherduck-narrative/skills/dive-from-plan/: SKILL.md
plugins/motherduck-narrative/skills/humanizer/: SKILL.md
plugins/motherduck-narrative/skills/motherduck-design-system/: SKILL.md
plugins/motherduck-narrative/skills/paper-from-plan/: SKILL.md
plugins/motherduck-narrative/skills/paper-style-guide/: SKILL.md
plugins/motherduck-narrative/skills/paper-to-dive/: SKILL.md
plugins/motherduck-narrative/skills/slide-plan/: SKILL.md
scripts/: build_and_serve.py  mcp_server_launcher.py  run_enhanced_server.py  test_enhanced_client.py  test_mcp_client.py
src/db_tariffs/: db_build.py
src/mcp_server/: __init__.py  __main__.py  server.py
src/mcp_server/core/: __init__.py  configs.py  database_client.py  prompts.py
src/mcp_server/plugins/: __init__.py
src/mcp_server/plugins/tariffs/: __init__.py
src/mcp_server_motherduck/: README.md  __init__.py  __main__.py  configs.py  database.py  instructions.py  prompt.py  server.py
src/mcp_server_motherduck/tools/: __init__.py  execute_query.py  list_columns.py  list_databases.py  list_tables.py  query.py  switch_database_connection.py
src/tariffs_db/: db_build.py
src/tariffs_mcp/: README.md  enhanced_mcp_server.py  tariffs_mcp_server.py
tests/: README.md  __init__.py  test_consolidation.py  test_database.py  test_db_path_resolution.py  test_manifest_defaults.py  test_mcp_logging.py
tests/e2e/: conftest.py  test_catalog_tools.py  test_http_transport.py  test_init_sql.py  test_limits.py  test_local_duckdb.py  test_memory_duckdb.py  test_motherduck.py  test_motherduck_readonly.py  test_read_only.py  test_read_only_concurrent.py  test_s3_duckdb.py  test_saas_mode.py  test_secure_mode.py  test_switch_database_connection.py  test_timeout.py  test_type_serialization.py
tests/e2e/fixtures/: create_test_db.py  test.duckdb.wal
tests/unit/: test_quoting.py
