[project]
name = "mcp-server-unified"
version = "1.0.0"
description = "Unified MCP server for DuckDB/MotherDuck with modular dataset support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "duckdb>=0.9.0",
 "tabulate>=0.9.0",
 "click>=8.1.8",
 "starlette>=0.46.1",
 "uvicorn>=0.34.0",
 "anyio>=4.8.0",
 "mcp>=1.9.4",
 "pytz>=2025.2",
 "pandas>=1.5.0",
 "requests>=2.28.0",
 "openpyxl>=3.0.0",
 "xlrd>=2.0.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
]

[[project.authors]]
name = "jmabry"
email = "your-email@example.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[project.scripts]
mcp-server-unified = "mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
