[project]
name = "mcp-server-motherduck"
version = "0.8.1"
description = "A MCP server for MotherDuck and local DuckDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "duckdb==1.4.3",
 "tabulate>=0.9.0",
 "click>=8.1.8",
 "starlette>=0.49.1",
 "uvicorn>=0.34.0",
 "anyio>=4.8.0",
 "mcp>=1.23.0",
 "pytz>=2025.2"
]

[[project.authors]]
name = "tdoehmen"
email = "till@motherduck.com"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fastmcp>=2.14",
    "python-dotenv>=1.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-motherduck = "mcp_server_motherduck:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.bumpver]
current_version = "0.8.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"server.json" = ['"version": "{version}"']
"src/mcp_server_motherduck/configs.py" = ['SERVER_VERSION = "{version}"']
